# nand2oop

./: Cargo.toml  README.md  filter-issues  pre-commit
docs/adr/: diagram-complexity-hiding.md  dsl-graphs.md  issue-tracking.md  language-cycles.md  language.md  modelling-sequential-components.md  structured-inputs-outputs.md  ui-client.md
hdl/: Cargo.toml
hdl-macro/: Cargo.toml
hdl-macro-test/: Cargo.toml
hdl-macro-test/src/: lib.rs
hdl-macro/src/: lib.rs
hdl/src/: lib.rs
issues/: add-into-implementations-inputs.md  chip-diagram-names-inputs-outputs.md  clean-up-macros.md  document-evaluation-strategy.md  generalise-create-subchip-to-n.md  generic-const-constraints-chipdef.md  interactive-chip-diagrams.md  remove-input-boilerplate.md  remove-into.md  remove-output-boilerplate.md  simplify-visualisation-array-inputs.md  speed-up-execution.md  support-chip-fn-args-2d-arrays.md  userinput-naming.md
project/: Cargo.toml
project/src/: main.rs
ui/: Cargo.toml
ui/http/: index.html
ui/src/: lib.rs
