[package]
name = "project"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdl-macro = { path = "../hdl-macro" }
ui = { path = "../ui" }
hdl = { path = "../hdl" }
bumpalo = "3.16.0"
